[package]
name = "rkprobes"
version = "0.1.0"
authors = ["hm <qq171928059@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
spin = "0.5"
trapframe = { git = "https://github.com/rcore-os/trapframe-rs", rev = "bdfe5aa" }
riscv-decode = "0.2.0"